--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a{text-decoration: none; color: #f9f9f9;}
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 3rem 1.5rem;
+    padding: 3rem 1.5rem 0;
     align-items: center;
 }
 
@@ -76,25 +76,26 @@ a{text-decoration: none; color: #f9f9f9;}
 
 @media screen and (max-width: 1022px) {
 
-    nav#mobile-screen > .left-column {width: 60% !important;}
+    nav#mobile-screen > .left-column {width: 60% !important; padding: 93px 1.5rem 0 !important;}
+
+    nav#mobile-screen > .left-column > ul > .item:first-child > .link{padding-top: 5px;}
+
+    nav#mobile-screen > .left-column .social-media{padding: 1.5rem 0 !important;}
 
     nav#mobile-screen > .right-column {width: 40% !important;}
 
-    .logo-close {padding: 1.5rem 2rem !important;}
+    .logo-close {padding: 1.5rem 2rem 0 !important;}
 
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
 
     nav#mobile-screen > .left-column {
         width: 100% !important;
-        height: 100vh !important;
-        padding: 113px 1.2rem 0 !important;
+        padding-left: 1.2rem !important;
     }
 
     nav#mobile-screen > .left-column > ul > .item {font-size: 1.75rem !important;}
-
-    nav#mobile-screen > .left-column > ul {height: 145px !important;}
 
     nav#mobile-screen > .left-column > ul > .item > .link{
         width: 135px !important;
@@ -112,10 +113,9 @@ a{text-decoration: none; color: #f9f9f9;}
 
 @media screen and (max-width: 600px) {
 
-    nav#mobile-screen > .left-column {
-        height: 74vh !important;
-        padding: 150px 1.2rem 0 !important;
-    }
+    nav#mobile-screen {height: 70vh !important;}
+
+    nav#mobile-screen > .left-column {height: 70vh !important; padding: 150px 1.2rem 0 !important;}
 
     nav#mobile-screen > .left-column > ul > .item {font-size: 1.5rem !important;}
 
@@ -128,7 +128,7 @@ a{text-decoration: none; color: #f9f9f9;}
 
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 480px) {
 
     .close-text {display: none;}
 
@@ -137,10 +137,6 @@ a{text-decoration: none; color: #f9f9f9;}
     .logo-close .logo {width: 130px !important;}
 
     .logo-close .logo img{width: 100% !important;}
-
-    nav#mobile-screen > .left-column {height: 75vh !important;}
-
-    nav#mobile-screen > .left-column > ul {height: 225px !important;}
 
     nav#mobile-screen > .left-column > ul > .item > .link {width: auto !important;}   
     
@@ -319,8 +315,9 @@ nav#wide-screen > .left-column .hamburger-menu{
 
 nav#mobile-screen {
     position: absolute;
+    display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     top: 0;
     background-color: #222222;
     z-index: 1000;
@@ -330,17 +327,19 @@ nav#mobile-screen > .left-column {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+    gap: 0vh;
+    min-height: 100vh;
     width: 70%;
-    padding: 197px 1.5rem 0;
-    float: left;
+    padding-top: 113px;
+    padding: 113px 1.5rem 0;
 }
 
 nav#mobile-screen > .left-column > ul {
-    height: 350px; 
-    overflow-y: scroll;
+    height: 50vh;
+    padding: calc(16vh - 40px) 0 0;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    overflow-y: scroll;
 }
 /* Chrome */
 nav#mobile-screen > .left-column > ul::-webkit-scrollbar {overflow: hidden;} 
@@ -451,13 +450,14 @@ nav#mobile-screen > .right-column {
     display: flex;
     flex-direction: column;
     background-color: #1A1A1A;
-    height: 100vh;
+    min-height: 100vh;
     width: 30%;
-    padding: 197px 3rem 0;
+    padding: 113px 3rem 0;
 }
 
 nav#mobile-screen > .right-column > .container{
-    height: 350px;
+    height: 50vh;
+    padding: calc(16vh - 40px) 0 0;
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -466,8 +466,8 @@ nav#mobile-screen > .right-column > .container{
 nav#mobile-screen > .right-column > .container::-webkit-scrollbar {overflow: hidden;} 
 
 nav#mobile-screen > .right-column .item{
-    margin-top: 20px;
-    margin-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     color: #f9f9f9;
 }
 
