--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,9 @@ a{text-decoration: none; color: #f9f9f9;}
 
 /* --------------------- global classes --------------------- */
 
-.shopping-bag{position: relative;}
+.shopping-bag-icon{position: relative;}
 
-.shopping-bag .goods-count{
+.shopping-bag-icon .goods-count{
     position: absolute;
     padding: 0px 5px;
     height: 14px;
@@ -65,11 +65,14 @@ a{text-decoration: none; color: #f9f9f9;}
 
 .logo-close {
     position: absolute;
+    left: 0;
     top: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 48px 24px 0;
+    padding-top: 48px;
+    padding-left: inherit;
+    padding-right: inherit;
     align-items: center;
 }
 
@@ -93,11 +96,16 @@ a{text-decoration: none; color: #f9f9f9;}
     top:0;
     height: 100vh;
     width: 100%;
-    background: #f9f9f924;
     z-index: 500;
 }
 
 /* --------------------- media queries --------------------- */
+
+@media screen and (min-width: 1330px) {
+
+    nav#wide-screen > .shopping-bag{right: 120px;}
+    
+}
 
 @media screen and (max-width: 1450px) {
  
@@ -111,7 +119,7 @@ a{text-decoration: none; color: #f9f9f9;}
 
     nav#wide-screen > .left-column > ul.container {display: none;}
 
-    nav#wide-screen > .left-column > .shopping-bag{display: block !important;} 
+    nav#wide-screen > .left-column > .shopping-bag-icon{display: block !important;} 
 
     nav#wide-screen .search-bar {min-height: 400px !important;}
 
@@ -123,7 +131,7 @@ a{text-decoration: none; color: #f9f9f9;}
 
     nav#wide-screen .search-bar form input{font-size: 1.5em !important;}
 
-    nav#wide-screen > .right-column > .shopping-bag{display: none;} 
+    nav#wide-screen > .right-column > .shopping-bag-icon{display: none;} 
 
     nav#wide-screen > .left-column .hamburger-menu{display: block !important;}
 
@@ -143,11 +151,11 @@ a{text-decoration: none; color: #f9f9f9;}
 
     nav#mobile-screen > .left-column > ul.container > .item:first-child > .link{padding-top: 5px;}
 
-    nav#mobile-screen > .left-column .social-media{padding: 1.5rem 0 !important;}
+    nav#mobile-screen > .left-column .social-media{padding: 24px 0 !important;}
 
     nav#mobile-screen > .right-column {width: 40% !important;}
 
-    .logo-close:not(.search-bar .logo-close) {padding: 1.5rem 2rem 0 !important;}
+    nav#mobile-screen .logo-close {padding: 24px 32px !important;}
 
 }
 
@@ -161,9 +169,9 @@ a{text-decoration: none; color: #f9f9f9;}
 
     nav#wide-screen > .right-column .hamburger-menu{display: block !important;}
 
-    nav#wide-screen > .right-column .shopping-bag{display: block !important;}
+    nav#wide-screen > .right-column .shopping-bag-icon{display: block !important;}
 
-    nav#wide-screen > .right-column .contact-us{display: none !important;}
+    nav#wide-screen > .right-column .contact-us-icon{display: none !important;}
     
     nav#mobile-screen {display: block !important;}
 
@@ -205,7 +213,7 @@ a{text-decoration: none; color: #f9f9f9;}
 
     .close-text {display: none;}
 
-    .logo-close {padding: 1rem 1rem 0 !important;}
+    nav#mobile-screen .logo-close {padding: 16px 16px 0 !important;}
 
     .logo-close .logo {width: 130px !important;}
 
@@ -231,6 +239,12 @@ a{text-decoration: none; color: #f9f9f9;}
     nav#mobile-screen > .left-column > ul.container > .item > .link {width: auto !important;}   
     
     nav#mobile-screen > .left-column .item > .link > svg {margin-left: 10px;}
+
+}
+
+@media screen and (max-width: 390px) {
+
+    nav#wide-screen > .contact-us {width: 100vw !important; padding: 20px 25px !important;}
 
 }
 
@@ -269,7 +283,7 @@ nav#wide-screen svg{
 }
 
 nav#wide-screen svg path{stroke: #d8d8d8; stroke-width: 0px;}
-nav#wide-screen .shopping-bag path{stroke-width: 1px;}
+nav#wide-screen .shopping-bag-icon path{stroke-width: 1px;}
 
 /* --------------------- wide-screen nav --------------------- */
 
@@ -309,7 +323,6 @@ nav#wide-screen > .left-column .link{
     position: relative;
 }
 
-/* adding underline to the links */
 nav#wide-screen > .left-column .link::after, 
 nav#wide-screen > .left-column .sub-menu .sub-link .text::after, 
 nav#wide-screen > .left-column .child-menu .child-link .text::after {
@@ -413,9 +426,9 @@ nav#wide-screen > .left-column .sub-menu .sub-link svg{margin-left: 20px;}
 
 nav#wide-screen > .left-column > .hamburger-menu{display: none;}
 
-nav#wide-screen > .left-column > .shopping-bag{display: none;} 
+nav#wide-screen > .left-column > .shopping-bag-icon{display: none;} 
 
-/* >>>>>>>>>>>>  center column <<<<<<<<<<<< */
+/* >>>>>>>>>>>> center column <<<<<<<<<<<< */
 
 nav#wide-screen > .center-column{
     display: flex;
@@ -426,7 +439,7 @@ nav#wide-screen > .center-column{
 
 nav#wide-screen > .center-column .logo{width: 186px;}
 
-/* >>>>>>>>>>>>  right column <<<<<<<<<<<< */
+/* >>>>>>>>>>>> right column <<<<<<<<<<<< */
 
 nav#wide-screen > .right-column{
     display: flex;
@@ -439,7 +452,7 @@ nav#wide-screen > .right-column{
 
 nav#wide-screen > .right-column .hamburger-menu{display: none;}
 
-/* --------------------- search bar --------------------- */
+/* >>>>>>>>>>>> search bar <<<<<<<<<<<< */
 
 nav#wide-screen .search-bar{
     position: fixed;
@@ -504,6 +517,113 @@ nav#wide-screen .search-bar button{
     right: 0;
 }
 
+/* >>>>>>>>>>>> contact us <<<<<<<<<<<< */
+
+nav#wide-screen > .contact-us{
+    position: fixed;
+    top: 0;
+    right: -390px;
+    width: 390px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 48px 50px;
+    background-color: #F9F6EF;
+    z-index: 1000;
+    opacity: 0;
+    transition: right .8s ease;
+    overflow: hidden;
+}
+
+nav#wide-screen > .contact-us .logo-close{
+    position: relative;
+    padding: 0;
+}
+
+nav#wide-screen > .contact-us .social-media{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 35px;
+    animation-duration: 1.8s;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+}
+
+nav#wide-screen > .contact-us .social-media .link{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+nav#wide-screen > .contact-us .social-media .link:hover > .text{color: #777;}
+
+nav#wide-screen > .contact-us .social-media .link:hover .facebook path{fill: #777}
+nav#wide-screen > .contact-us .social-media .link:hover .x path,
+nav#wide-screen > .contact-us .social-media .link:hover .x svg{stroke: #777; fill: #777;}
+nav#wide-screen > .contact-us .social-media .link:hover .dribble path,
+nav#wide-screen > .contact-us .social-media .link:hover .dribble svg{stroke: #777 ;fill: #777;}
+nav#wide-screen > .contact-us .social-media .link:hover .instagram path,
+nav#wide-screen > .contact-us .social-media .link:hover .instagram svg{stroke: #777 ;fill: #777;}
+
+nav#wide-screen > .contact-us .social-media .text{
+    color: #222;
+    font-size: 1.2em;
+}
+
+nav#wide-screen > .contact-us .social-media svg{
+    width: 18px;
+    height: fit-content;
+}
+
+nav#wide-screen > .contact-us .social-media .link path{transition: all .2s ease; fill: #222;}
+
+nav#wide-screen > .contact-us  .email-phone{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-family: "Quattrocento Sans", sans-serif;
+    font-weight: 400;
+    padding-top: 35px;
+    border-top: 1px solid #ccc;
+}
+
+nav#wide-screen > .contact-us  .email-phone .phone{
+    color: inherit;
+    font-size: 1.2em;
+}
+
+nav#wide-screen > .contact-us  .email-phone .email{
+    color: #777;
+}
+
+/* >>>>>>>>>>>> shopping bag <<<<<<<<<<<< */
+
+nav#wide-screen > .shopping-bag{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 140px;
+    width: 330px;
+    height: 300px;
+    text-align: center;
+    padding: 50px;
+    background-color: #373737;
+    color: #fff;
+}
+
+nav#wide-screen > .shopping-bag svg{
+    fill: #fff;
+    margin-bottom: 20px;
+}
+
+nav#wide-screen > .shopping-bag .text{
+
+}
+
 /* --------------------- mobile screen nav --------------------- */
 
 nav#mobile-screen {
@@ -518,6 +638,8 @@ nav#mobile-screen {
     z-index: 1000;
     overflow: hidden;
 }
+
+nav#mobile-screen .logo-close{padding: 48px 24px 0;}
 
 /* >>>>>>>>>>>>  left column <<<<<<<<<<<< */
 
